# deltaFusion

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/ISSUES/: filter-error.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: run_benchmark.py
docs/: BENCHMARKS.md  api.md  usage.md
examples/: 01_basic_query.py  02_polars_integration.py  03_time_series.py  04_schema_evolution.py  05_no_dependencies.py  06_join_and_time_travel.py  07_s3_storage.py
python/delta_fusion/: __init__.py  __init__.pyi
scripts/: e2e_test.py
src/: config.rs  engine.rs  error.rs  lib.rs  python.rs  time_series.rs
tests/: test_engine.rs  test_time_series.rs  test_write.rs
tests/common/: mod.rs
tests/python/: conftest.py  test_engine.py  test_time_series.py  test_write.py
