[package]
name = "delta_fusion"
version = "0.0.1"
edition = "2021"

[lib]
name = "delta_fusion"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
# Delta Lake
deltalake = { version = "0.22", features = ["datafusion"] }

# Arrow & DataFusion
arrow = { version = "53", features = ["pyarrow", "ipc"] }
arrow-ipc = "53"
datafusion = "43"

# PyO3 bindings
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Date/Time
chrono = "0.4"

# Utils
num_cpus = "1.16"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.14"
parquet = { version = "53", features = ["arrow"] }
