[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "delta_fusion"
version = "0.1.0"
description = "High-performance Delta Lake query engine for Python"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
pyarrow = [
    "pyarrow>=14.0.0",
]
polars = [
    "polars>=0.20.0",
]
all = [
    "pyarrow>=14.0.0",
    "polars>=0.20.0",
]
dev = [
    "pytest>=7.0",
    "pandas>=2.0",
    "pyarrow>=14.0.0",
    "polars>=0.20.0",
    "maturin>=1.7",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "delta_fusion._core"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
