[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "delta_fusion"
version = "0.1.0"
description = "High-performance Delta Lake query engine for Python"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "ysj" }
]
keywords = [
    "delta-lake",
    "datafusion",
    "arrow",
    "parquet",
    "data-engineering",
    "query-engine",
    "polars",
    "pyarrow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ysj/delta-fusion"
Documentation = "https://github.com/ysj/delta-fusion/tree/main/docs"
Repository = "https://github.com/ysj/delta-fusion"
Issues = "https://github.com/ysj/delta-fusion/issues"

[project.optional-dependencies]
pyarrow = [
    "pyarrow>=14.0.0",
]
polars = [
    "polars>=0.20.0",
]
all = [
    "pyarrow>=14.0.0",
    "polars>=0.20.0",
]
dev = [
    "pytest>=7.0",
    "pandas>=2.0",
    "pyarrow>=14.0.0",
    "polars>=0.20.0",
    "maturin>=1.7",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "delta_fusion._core"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
